添加注册接口
