# auth/api/auth/v1/auth_http.pb.go
@@ -10,6 +10,7 @@ import (
 	context "context"
 	http "github.com/go-kratos/kratos/v2/transport/http"
 	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
 )
 
 // This is a compile-time assertion to ensure that this generated file
@@ -21,16 +22,41 @@ const _ = http.SupportPackageIsVersion1
 
 const OperationAuthServiceLogin = "/auth.v1.AuthService/Login"
 const OperationAuthServiceLogout = "/auth.v1.AuthService/Logout"
+const OperationAuthServiceRegister = "/auth.v1.AuthService/Register"
 
 type AuthServiceHTTPServer interface {
 	Login(context.Context, *LoginReq) (*LoginRsp, error)
-	Logout(context.Context, *LogoutReq) (*LogoutRsp, error)
+	Logout(context.Context, *LogoutReq) (*emptypb.Empty, error)
+	Register(context.Context, *RegisterReq) (*emptypb.Empty, error)
 }
 
 func RegisterAuthServiceHTTPServer(s *http.Server, srv AuthServiceHTTPServer) {
 	r := s.Route("/")
+	r.POST("/auth/register", _AuthService_Register0_HTTP_Handler(srv))
 	r.POST("/auth/login", _AuthService_Login0_HTTP_Handler(srv))
 	r.POST("/auth/logout", _AuthService_Logout0_HTTP_Handler(srv))
+}
+
+func _AuthService_Register0_HTTP_Handler(srv AuthServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in RegisterReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAuthServiceRegister)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Register(ctx, req.(*RegisterReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*emptypb.Empty)
+		return ctx.Result(200, reply)
+	}
 }
 
 func _AuthService_Login0_HTTP_Handler(srv AuthServiceHTTPServer) func(ctx http.Context) error {
@@ -72,14 +98,15 @@ func _AuthService_Logout0_HTTP_Handler(srv AuthServiceHTTPServer) func(ctx http.
 		if err != nil {
 			return err
 		}
-		reply := out.(*LogoutRsp)
+		reply := out.(*emptypb.Empty)
 		return ctx.Result(200, reply)
 	}
 }
 
 type AuthServiceHTTPClient interface {
 	Login(ctx context.Context, req *LoginReq, opts ...http.CallOption) (rsp *LoginRsp, err error)
-	Logout(ctx context.Context, req *LogoutReq, opts ...http.CallOption) (rsp *LogoutRsp, err error)
+	Logout(ctx context.Context, req *LogoutReq, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
+	Register(ctx context.Context, req *RegisterReq, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
 }
 
 type AuthServiceHTTPClientImpl struct {
@@ -103,11 +130,24 @@ func (c *AuthServiceHTTPClientImpl) Login(ctx context.Context, in *LoginReq, opt
 	return &out, nil
 }
 
-func (c *AuthServiceHTTPClientImpl) Logout(ctx context.Context, in *LogoutReq, opts ...http.CallOption) (*LogoutRsp, error) {
-	var out LogoutRsp
+func (c *AuthServiceHTTPClientImpl) Logout(ctx context.Context, in *LogoutReq, opts ...http.CallOption) (*emptypb.Empty, error) {
+	var out emptypb.Empty
 	pattern := "/auth/logout"
 	path := binding.EncodeURL(pattern, in, false)
 	opts = append(opts, http.Operation(OperationAuthServiceLogout))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AuthServiceHTTPClientImpl) Register(ctx context.Context, in *RegisterReq, opts ...http.CallOption) (*emptypb.Empty, error) {
+	var out emptypb.Empty
+	pattern := "/auth/register"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAuthServiceRegister))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
 	if err != nil {
